Surface synchronization: Fix devtools bug

GetLatestInFlightSurface can return the primary surface ID. This can
cause a race where occasionally the primary surface will be closed making
a page unusable. This CL fixes the issue by skipping the primary surface
in GetLatestInFlightSurface.

Bug: 803243, 672962
Cq-Include-Trybots: master.tryserver.chromium.android:android_optional_gpu_tests_rel
Change-Id: Icfc0b96847962e94002b8d4e2885684348232b03