components/viz/service/frame_sinks/surface_synchronization_unittest.cc
@@ -1915,6 +1915,7 @@ TEST_F(SurfaceSynchronizationTest, LatestInFlightSurface) {
   const SurfaceId child_id1 = MakeSurfaceId(kChildFrameSink1, 1);
   const SurfaceId child_id2 = MakeSurfaceId(kChildFrameSink1, 2);
   const SurfaceId child_id3 = MakeSurfaceId(kChildFrameSink1, 2, 2);
+  const SurfaceId child_id4 = MakeSurfaceId(kChildFrameSink1, 2, 3);
 
   child_support1().SubmitCompositorFrame(child_id1.local_surface_id(),
                                          MakeDefaultCompositorFrame());
@@ -1974,14 +1975,14 @@ TEST_F(SurfaceSynchronizationTest, LatestInFlightSurface) {
   // GetLatestInFlightSurface will not return child_id2's surface because it
   // does not yet have an owner.
   EXPECT_EQ(GetSurfaceForId(child_id1),
-            GetLatestInFlightSurface(child_id2, child_id1));
+            GetLatestInFlightSurface(child_id3, child_id1));
 
   // Now that the owner of |child_id2| is known, GetLatestInFlightSurface will
   // return it as a possible fallback.
   frame_sink_manager().surface_manager()->AssignTemporaryReference(
       child_id2, parent_id.frame_sink_id());
   EXPECT_EQ(GetSurfaceForId(child_id2),
-            GetLatestInFlightSurface(child_id2, child_id1));
+            GetLatestInFlightSurface(child_id3, child_id1));
 
   // If the primary surface is old, then we shouldn't return an in-flight
   // surface that is newer than the primary.
@@ -1999,7 +2000,7 @@ TEST_F(SurfaceSynchronizationTest, LatestInFlightSurface) {
   // GetLatestInFlightSurface will not return child_id3's surface because it
   // does not yet have an owner.
   EXPECT_EQ(GetSurfaceForId(child_id2),
-            GetLatestInFlightSurface(child_id3, child_id1));
+            GetLatestInFlightSurface(child_id4, child_id1));
   EXPECT_THAT(GetChildReferences(parent_id), UnorderedElementsAre(child_id1));
 
   // Now that the owner of |child_id3| is known, GetLatestInFlightSurface will
@@ -2007,12 +2008,12 @@ TEST_F(SurfaceSynchronizationTest, LatestInFlightSurface) {
   frame_sink_manager().surface_manager()->AssignTemporaryReference(
       child_id3, parent_id.frame_sink_id());
   EXPECT_EQ(GetSurfaceForId(child_id3),
-            GetLatestInFlightSurface(child_id3, child_id1));
+            GetLatestInFlightSurface(child_id4, child_id1));
 
   // If the primary surface is old, then we shouldn't return an in-flight
   // surface that is newer than the primary.
   EXPECT_EQ(GetSurfaceForId(child_id2),
-            GetLatestInFlightSurface(child_id2, child_id1));
+            GetLatestInFlightSurface(child_id3, child_id1));
 }
 
 // This test verifies that GetLatestInFlightSurface will return nullptr
@@ -2075,6 +2076,53 @@ TEST_F(SurfaceSynchronizationTest, LatestInFlightSurfaceDifferentFrameSinkIds) {
                                          MakeDefaultCompositorFrame());
   EXPECT_EQ(GetSurfaceForId(child_id1),
             GetLatestInFlightSurface(child_id2, child_id1));
+}
+
+// This test verifies that GetLatestInFlightSurface will never return the
+// primary surface ID even if it is in the temporary reference queue.
+TEST_F(SurfaceSynchronizationTest, LatestInFlightSurfaceSkipPrimary) {
+  const SurfaceId parent_id = MakeSurfaceId(kParentFrameSink, 1);
+  const SurfaceId child_id1 = MakeSurfaceId(kChildFrameSink1, 1);
+  const SurfaceId child_id2 = MakeSurfaceId(kChildFrameSink1, 2);
+  const SurfaceId child_id3 = MakeSurfaceId(kChildFrameSink1, 3);
+
+  // Don't automatically assign temporary references.
+  DisableAssignTemporaryReferences();
+
+  child_support1().SubmitCompositorFrame(child_id1.local_surface_id(),
+                                         MakeDefaultCompositorFrame());
+
+  // Create a reference from |parent_id| to |child_id|.
+  parent_support().SubmitCompositorFrame(
+      parent_id.local_surface_id(),
+      MakeCompositorFrame(empty_surface_ids(), {child_id1},
+                          std::vector<TransferableResource>()));
+
+  child_support1().SubmitCompositorFrame(child_id2.local_surface_id(),
+                                         MakeDefaultCompositorFrame());
+
+  // |child_id2| will not be returned until its temporary reference is
+  // assigned.
+  EXPECT_EQ(GetSurfaceForId(child_id1),
+            GetLatestInFlightSurface(child_id3, child_id1));
+
+  // Verify that there is a temporary reference for |child_id2|.
+  EXPECT_TRUE(HasTemporaryReference(child_id2));
+  frame_sink_manager().surface_manager()->AssignTemporaryReference(
+      child_id2, parent_id.frame_sink_id());
+
+  EXPECT_EQ(GetSurfaceForId(child_id2),
+            GetLatestInFlightSurface(child_id3, child_id1));
+
+  child_support1().SubmitCompositorFrame(child_id3.local_surface_id(),
+                                         MakeDefaultCompositorFrame());
+  frame_sink_manager().surface_manager()->AssignTemporaryReference(
+      child_id3, parent_id.frame_sink_id());
+
+  // Even though there is a valid temporary reference with an owner for
+  // the primary, we never pick the primary.
+  EXPECT_EQ(GetSurfaceForId(child_id2),
+            GetLatestInFlightSurface(child_id3, child_id1));
 }
 
 // This test verifies that if a child submits a LocalSurfaceId newer that the
